# netsim

./: .gitignore  CMakeLists.txt  README.md  main.cpp  package.cpp  package.hpp
include/: config.hpp  factory.hpp  helpers.hpp  nodes.hpp  package.hpp  reports.hpp  simulation.hpp  storage_types.hpp  types.hpp
mocks/: global_functions_mock.hpp  nodes_mocks.hpp
src/: factory.cpp  helpers.cpp  nodes.cpp  package.cpp  reports.cpp  simulation.cpp  storage_types.cpp
test/: test_nodes.cpp
uml_diagrams/: uml_diagram.txt
